tests/should_fail/bad_toplevel_declaration.jou
def main() -> int:
    'x'  # Error: expected a statement, got an integer
